Add authentication saved outfits and boards